--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,6 +22,8 @@ body {
     font-size: var(--fs-h1);
     font-weight: var(--fw-semi);
     color: var(--black);
+    font-family: var(--ff-title);
+    text-shadow: 2px 2px 0 var(--text-shadow);
 }
 
 .nav-menu {
@@ -82,68 +84,64 @@ body {
 }
 
 /*
-    Home
+    hero
 */
-.home__container {
+.hero-container {
     position: relative;
     padding-block: 5.5rem;
 }
 
-.home__text {
+.hero-caption {
     font-size: var(--fs-big);
     text-align: center;
 }
 
-.home__social {
+.hero-social {
     display: none;
 }
 
-.home__info {
+.hero-info {
     margin-top: 1rem;
 }
 
-.home__desc {
+.hero-desc {
     text-align: center;
     font-size: var(--fs-h3);
     margin-bottom: 4.5rem;
 }
 
-.home__desc b {
+.hero-desc b {
     display: inline-block;
     font-size: var(--fs-h2);
     background: linear-gradient(90deg, hsla(0, 98%, 0%, .3), hsla(0, 0%, 0%, 0));
 }
 
-.home__desc b:hover {
-    background: linear-gradient(90deg, hsla(14, 98%, 50%, .3), hsla(14, 98%, 50%, 0));
-}
-
-.home-link {
+.hero-link {
     display: inline-block;
     font-weight: var(--fw-medium);
-    transition: all 0.4s;
 }
 
-.home-link:hover {
-    text-shadow: 2px 2px 0 var(--second-color-light);
+.hero-link:hover {
+    transform: translate(-1px, -1px);
+    text-shadow: 1px 1px 0 var(--first-color);
 }
 
-.home__scroll {
+.hero-scroll {
     display: block;
     width: max-content;
     margin: 0 auto;
     transition: transform .4s;
 }
 
-.home__scroll-text {
+.hero-scrolltext {
     display: none;
 }
 
-.home__scroll:hover {
-    transform: translateY(1rem);
+.hero-scroll:hover {
+    transform: translateY(.5rem);
 }
 
-.home__scroll-box {
+.hero-scrollbox {
     background-color: var(--second-color);
     color: var(--white);
     width: 36px;
@@ -151,11 +149,12 @@ body {
     display: grid;
     place-items: center;
     font-size: 1rem;
+    border-radius: 50%;
     cursor: pointer;
     overflow: hidden;
 }
 
-.home__scroll-box i {
+.hero-scrollbox i {
     animation: scroll-down 3s infinite;
 }
 
@@ -182,14 +181,14 @@ body {
     background-color: var(--container-color);
 }
 
-.projects__container {
+.projects-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.projects__card {
+.projects-card {
     position: relative;
     width: 100%;
     height: 100%;
@@ -200,7 +199,7 @@ body {
     transition: all .6s;
 }
 
-.projects__img {
+.projects-img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -209,7 +208,7 @@ body {
     transform: scale(1.1);
 }
 
-.projects__text {
+.projects-text {
     position: absolute;
     left: 50%;
     bottom: 50%;
@@ -217,6 +216,7 @@ body {
     width: 90%;
     text-align: center;
     text-transform: uppercase;
+    text-shadow: .1em .1em 0 var(--text-shadow);
     font-size: var(--fs-h1);
     font-family: var(--ff-title);
     color: var(--white);
@@ -226,32 +226,33 @@ body {
     border: 1px solid var(--white);
 }
 
-.projects__overlay {
+.projects-overlay {
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 30%;
+    height: 40%;
     z-index: 1;
     background: linear-gradient(180deg, hsla(0, 0%, 0%, 0), hsla(0, 0%, 0%, 0.6));
     transform: translateY(100%);
     transition: all .4s;
 }
 
-.projects__card:hover {
+.projects-card:hover {
+    transform: translate(-.2em, -.2em);
     box-shadow: .5em .5em 0 var(--second-color);
 }
 
-.projects__card:hover .projects__img {
+.projects-card:hover .projects-img {
     transform: scale(1);
     filter: saturate(1) brightness(1.1);
 }
 
-.projects__card:hover .projects__overlay {
+.projects-card:hover .projects-overlay {
     transform: translateY(0);
 }
 
-.projects__card:hover .projects__text {
+.projects-card:hover .projects-text {
     bottom: -.1em;
     border: 0;
     transform: translate(-50%, 0%);
@@ -260,18 +261,18 @@ body {
 /*
     About
 */
-.about__image {
+.about-image {
     position: relative;
     width: 220px;
     margin-inline: auto;
 }
 
-.about__img {
+.about-img {
     position: relative;
     border: 4px solid var(--white);
 }
 
-.about__box {
+.about-box {
     position: absolute;
     width: 180px;
     height: 180px;
@@ -281,18 +282,18 @@ body {
     border: 1px solid var(--second-color);
 }
 
-.about__info {
+.about-info {
     padding-left: 1.5rem;
     padding-top: 1rem;
 }
 
-.about__desc {
+.about-desc {
     position: relative;
     font-weight: var(--fw-medium);
     margin-bottom: 1.5rem;
 }
 
-.about__desc::after {
+.about-desc::after {
     content: '';
     width: 20px;
     height: 1px;
@@ -302,12 +303,12 @@ body {
     top: .5rem;
 }
 
-.about__list {
+.about-list {
     list-style: square;
     color: var(--title-color);
     margin-bottom: 3rem;
 }
-.about__buttons {
+.about-button {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -315,20 +316,20 @@ body {
 }
 
 /* -- Education -- */
-.edu__container{
+.edu-container{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.edu__data{
+.edu-data{
     display: grid;
     grid-template-columns: max-content 1fr;
     column-gap: 1.5rem;
 }
 
-.edu__title{
+.edu-title{
     font-size: var(--fs-h3);
     font-weight: var(--fw-medium);
     line-height: 1.5;
@@ -338,32 +339,33 @@ body {
     box-shadow: 2px 2px 0;
 }
 
-.edu__subtitle{
+.edu-subtitle{
     display: inline-block;
     font-weight: var(--fw-semi);
     margin-bottom: .5rem;
 }
 
-.edu__calendar{
+.edu-calendar{
     font-size: 1.25rem;
     color: var(--text-color);
     font-weight: var(--fw-medium);
     margin-bottom: 2rem;
 }
 
-.edu__calendar span {
+.edu-calendar span {
     font-size: var(--fs-normal);
 }
 
-.edu__dot{
+.edu-dot{
     display: inline-block;
     position: relative;
     width: 13px;
     height: 13px;
     background-color: var(--second-color);
+    border-radius: 50%;
 }
 
-.edu__dot::after {
+.edu-dot::after {
     content: '';
     position: absolute;
     z-index: 1;
@@ -371,9 +373,10 @@ body {
     height: 100%;
     background-color: var(--body-color);
     border: 1px solid var(--second-color);
+    border-radius: 50%;
 }
 
-.edu__line{
+.edu-line{
     display: flex;
     width: 2px;
     height: 100%;
@@ -395,11 +398,11 @@ body {
 /* ----- MEDIA QUERIES ----- */
 /* For small devices */
 @media screen and (max-width: 350px) {
-    .about__image {
+    .about-image {
         width: 180px;
     }
 
-    .about__box {
+    .about-box {
         width: 160px;
         height: 160px;
     }
@@ -408,13 +411,13 @@ body {
 
 /* For medium devices */
 @media screen and (min-width: 576px) {
-    .projects__container,
-    .about__container {
+    .projects-container,
+    .about-container {
         grid-template-columns: 380px;
         justify-content: center;
     }
 
-    .edu__content{
+    .edu-content{
         display: grid;
         justify-content: center;
     }
@@ -422,33 +425,33 @@ body {
 }
 
 @media screen and (min-width: 768px){
-    .home__container {
+    .hero-container {
         align-items: center;
     }
 
-    .home__text,
-    .home__desc {
+    .hero-caption,
+    .hero-desc {
         text-align: initial;
     }
 
-    .home__text {
+    .hero-caption {
         padding-left: 3rem;
         align-self: flex-end;
     }
 
-    .home__info {
+    .hero-info {
         margin-top: 0;
         padding-left: 1rem;
         align-self: flex-start;
     }
 
-    .home__desc {
+    .hero-desc {
         position: relative;
         font-size: var(--fs-h2);
         padding-left: 3rem;
     }
 
-    .home__desc::after {
+    .hero-desc::after {
         content: '';
         width: 32px;
         height: 2px;
@@ -458,7 +461,7 @@ body {
         top: 14px;
     }
 
-    .home__scroll {
+    .hero-scroll {
         width: max-content;
         margin-left: 2rem;
         display: flex;
@@ -467,35 +470,35 @@ body {
         column-gap: .75rem;
     }
 
-    .home__scroll-text {
+    .hero-scrolltext {
         display: block;
         color: var(--text-color);
-        font-size: var(--fs-smaller);
+        font-size: var(--fs-small);
         font-weight: var(--fw-medium);
     }
 
-    .projects__list {
+    .projects-list {
         grid-template-columns: repeat(2, 1fr);
     }
 
-    .about__container {
+    .about-container {
         grid-template-columns: .382fr .618fr;
         gap: 0rem;
         margin-block: 1rem;
     }
 
-    .about__img {
+    .about-img {
         width: 300px;
     }
 
-    .about__box {
+    .about-box {
         width: 210px;
         height: 210px;
         left: 1rem;
         top: 2rem;
     }
 
-    .about__desc {
+    .about-desc {
         font-size: var(--fs-h3);
         margin-bottom: 2rem;
     }
@@ -518,64 +521,64 @@ body {
         padding: .5em .5em 0;
     }
 
-    .home__scroll-box {
+    .hero-scrollbox {
         width: 44px;
         height: 44px;
     }
 
-    .projects__list {
+    .projects-list {
         gap: 4rem;
     }
 
-    .projects__card {
+    .projects-card {
         max-width: 450px;
     }
 
-    .projects__text {
+    .projects-text {
         font-size: var(--fs-h2);
         padding: 1em;
         align-items: center;
     }
 
-    .about__container {
+    .about-container {
         grid-template-columns: 440px 525px;
         gap: 1rem 3rem;
     }
 
-    .about__image {
+    .about-image {
         width: 350px;
     }
 
-    .about__img {
+    .about-img {
         border: 8px solid var(--white);
     }
 
-    .about__box {
+    .about-box {
         width: 300px;
         height: 300px;
     }
 
-    .about__info {
+    .about-info {
         align-self: flex-start;
         padding-left: 3rem;
     }
 
-    .about__desc {
+    .about-desc {
         font-size: var(--fs-h2);
     }
 
-    .about__desc::after {
+    .about-desc::after {
         width: 32px;
         height: 2px;
         left: -3rem;
         top: 14px;
     }
 
-    .about__list {
+    .about-list {
         margin-bottom: 5rem;
     }
 
-    .about__buttons {
+    .about-buttons {
         justify-content: initial;
     }
 }
