--- a/assets/css/required.css
+++ b/assets/css/required.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Montserrat+Alternates:ital@0;1&family=Montserrat:ital,wght@0,400;0,500;1,400&display=swap');
+/* ----- GOOGLE FONT ----- */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Raleway:wght@400;500;600;700&display=swap');
 
 /* -- Variable Css -- */
 :root {
@@ -6,21 +7,19 @@
 
     /* - Colors - */
      --first-color: hsl(14, 100%, 60%);
-     --first-color-light: hsl(14, 100%, 80%);
      --second-color: hsl(0, 0%, 20%);
-     --second-color-light: hsl(0, 0%, 80%);
 
      --black: hsl(0, 0%, 0%);
      --white: hsl(0, 100%, 100%);
      --trans: hsla(0, 0%, 0%, 0);
 
-     --text-color: hsl(0, 0%, 35%);
+     --text-color: hsl(0, 0%, 20%);
      --text-shadow: hsl(0, 0%, 60%);
-     --body-color: hsl(0, 0%, 95%);
+     --body-color: hsl(80, 26%, 93%);
      --container-color: hsl(0, 0%, 90%);
 
     /* - Font & Typograhy - */
-     --ff-title: 'Fredericka the Great', cursive;
+     --ff-title: 'Raleway', sans-serif;
      --ff-body: 'Montserrat', sans-serif;
 
      --fs-big: 2.5rem;
@@ -29,7 +28,6 @@
      --fs-h3: 1.125rem;
      --fs-normal: .938rem;
      --fs-small: .813rem;
-     --fs-smaller: .75rem;
 
      --fw-regular: 400;
      --fw-medium: 500;
@@ -51,7 +49,6 @@
         --fs-h3: 1.25rem;
         --fs-normal: 1rem;
         --fs-small: .875rem;
-        --fs-smaller: .813rem;
     }
 }
 
@@ -67,7 +64,8 @@ html {
 }
 
 h1, h2, h3 {
-    font-weight: var(--fw-bold);
+    font-weight: var(--fw-semi);
+    text-shadow: .05em .05em 0 var(--text-shadow);
 }
 
 ul {
@@ -97,7 +95,7 @@ img, video {
 }
 
 .section {
-    padding-block: 6rem 2rem;
+    padding-block: 6rem 4rem;
 }
 
 .section-title {
@@ -117,10 +115,10 @@ img, video {
     content: '';
     position: absolute;
     width: 2em;
-    height: 1em;
-    bottom: -.2em;
-    right: -.5em;
-    background-color: var(--second-color-light);
+    height: .1em;
+    bottom: -.1em;
+    right: -.4em;
+    background-color: var(--text-shadow);
 }
 
 .main {
@@ -144,6 +142,7 @@ img, video {
     border-radius: 50%;
     background-color: var(--first-color);
     z-index: var(--z-bg);
+    transition: transform .4s;
 }
 
 .social-link i {
@@ -165,7 +164,6 @@ img, video {
     color: var(--text-color);
     background-color: var(--white);
     border: 1px solid var(--second-color);
-    box-shadow: .2em .2em 0;
     transition: all .4s;
 }
 
@@ -175,8 +173,9 @@ img, video {
 
 .button:hover {
     color: var(--white);
-    background-color: var(--first-color);
-    box-shadow: .4em .4em 0 var(--second-color);
+    background-color: var(--second-color);
+    transform: translate(-.2em, -.2em);
+    box-shadow: .2em .2em 0 var(--first-color);
 }
 
 /* -- Header -- */
@@ -193,23 +192,23 @@ img, video {
 /* Active Link */
 .active-link {
     color: var(--black);
-    text-shadow: 2px 2px 0 var(--second-color-light);
+    text-shadow: 2px 2px 0 var(--text-shadow);
 }
 
 /* -- Footer -- */
-.footer__container {
+.footer-container {
     padding-block: 2em;
     row-gap: 1rem;
 }
 
-.footer__social {
+.footer-social {
     display: flex;
     justify-content: center;
     align-items: center;
     column-gap: 2rem;
 }
 
-.footer__copy {
+.footer-credit {
     font-size: var(--fs-small);
     text-align: center;
 }
@@ -220,9 +219,10 @@ img, video {
     right: 1rem;
     bottom: -50%;
     display: inline-flex;
-    padding: .4em .45em;
+    padding: .4em .5em;
     font-size: 1.25rem;
     border: 1px solid var(--text-color);
+    border-radius: 50%;
     color: var(--text-color);
     background-color: var(--body-color);
     z-index: var(--z-tooltip);
@@ -230,7 +230,7 @@ img, video {
 }
 
 .scrollup:hover {
-    transform: translateY(-1rem);
+    transform: translateY(-.5rem);
     color:var(--white);
     background-color: var(--second-color);
 }
@@ -283,13 +283,13 @@ img, video {
         height: 24px;
     }
 
-    .footer__container {
+    .footer-container {
         grid-template-columns: repeat(2, max-content);
         justify-content: space-between;
         align-items: end;
     }
 
-    .footer__copy {
+    .footer-credit {
         order: -1;
     }
 
