--- a/assets/project.css
+++ b/assets/project.css
@@ -81,6 +81,10 @@
 .project-btn {
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: 1rem;
 }
 
 .project-media {
@@ -173,6 +177,10 @@
 @media screen and (min-width: 576px) {
     .project-card {
         padding: 1rem 1rem 2rem;
+    }
+
+    .project-btn {
+        flex-direction: row;
     }
 }
 
